--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,14 @@ Package: mysterypackage
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
+Imports:
+    data.table,
+    dplyr  # 如果需要
 Author: PengHuang1994
-Maintainer: PengHuang1994@zju.edu.cn
+Maintainer: PengHuang
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Imports:
-    data.table,
-    dplyr
     
