add new description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Imports:
     data.table,
     dplyr
 Author: PengHuang1994
-Maintainer: PengHuang
+Maintainer:huangpeng
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
