--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,5 @@
 exportPattern("^[[:alpha:]]+")
 import(data.table)
 import(tidyverse)
+importFrom(GenomicFeatures, select)
+importFrom(dplyr, filter)  # Avoid importing conflicting select
