--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,9 @@ Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
 Imports:
-    data.table,
     GenomicFeatures,
-    dplyr
+    dplyr,
+    data.table
 Author: PengHuang1994
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
