--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,7 @@ Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
 Imports:
+    txdbmaker,
     GenomicFeatures,
     dplyr,
     data.table,
