--- a/inst/extdata/exomePeak-master/NAMESPACE
+++ b/inst/extdata/exomePeak-master/NAMESPACE
@@ -4,6 +4,6 @@ export(rhtest)
 export(exomepeak)
 export(bltest)
 export(RMT)
-import(GenomicFeatures)
+import(txdbmaker)
 import(Rsamtools)
 import(GenomicAlignments)
