--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Version: 0.1.0
 Imports:
     dplyr,
     data.table,
-    tidyverse
+    tidyverse,
+    foreach
 Author: PengHuang1994
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
