--- a/inst/extdata/exomePeak-master/NAMESPACE
+++ b/inst/extdata/exomePeak-master/NAMESPACE
@@ -4,8 +4,7 @@ export(rhtest)
 export(exomepeak)
 export(bltest)
 export(RMT)
-import(txdbmaker)
-importFrom(txdbmaker, makeTxDbFromGFF)
+import(GenomicFeatures)
 import(Rsamtools)
 import(GenomicAlignments)
 
