--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,8 @@ Imports:
     dplyr,
     data.table,
     tidyverse,
-    foreach
+    foreach,
+    doParallel
 Author: PengHuang1994
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
